<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_app_bar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultadofinal"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indice"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:elevation="6dp"
        android:padding="24dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/background_app_bar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResultadoImc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/background_app_bar"
                android:textSize="48sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <Button

        android:id="@+id/btnRecalcular"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/recalculate"
        android:textSize="22sp"
        android:backgroundTint="@color/title_text"
        android:background="@color/buttonBackground"
        android:textColor="@color/buttonText"
        android:layout_marginTop="40dp"/>
</LinearLayout>
