<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_bar"
    tools:context=".paquete.ImcActivity"
    android:paddingTop="70dp"
    android:paddingHorizontal="22dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/Male"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/Female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_text"
                android:text="@string/male"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/Female"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Male"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_text"
                android:text="@string/female"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </LinearLayout>
</androidx.cardview.widget.CardView>
<androidx.cardview.widget.CardView
    android:id="@+id/Altura"
    android:layout_width="350dp"
    android:layout_height="150dp"
    app:layout_constraintTop_toBottomOf="@+id/Male"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardBackgroundColor="@color/background_component"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="50dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAllCaps="true"
            android:textColor="@color/title_text"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tvAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"></TextView>

        <com.google.android.material.slider.Slider
            android:id="@+id/Centimetros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:valueFrom="120"
            android:valueTo="200" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/Peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/Edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Altura">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                >
            </TextView>
            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightfinal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                >
            </TextView>
            <com.google.android.material.slider.Slider
                android:id="@+id/SliderPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="25"
                android:valueTo="200"
                android:stepSize="1"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Peso"
        app:layout_constraintTop_toBottomOf="@+id/Altura">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/title_text"
                android:textAllCaps="true"
                android:textStyle="bold"
                >
            </TextView>
            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agefinal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                >
            </TextView>
            <com.google.android.material.slider.Slider
                android:id="@+id/SliderEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="8"
                android:valueTo="99"
                android:stepSize="1"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Calcular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="#8459EB"
        >
    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>